--- a/translations/zh-Hans.json
+++ b/translations/zh-Hans.json
@@ -11,7 +11,8 @@
       }
     },
     "abort": {
-      "one_instance_allowed": "\u914d\u7f6e\u4e00\u4e2a\u5c31\u591f\u4e86\u002c\u5f04\u90a3\u4e48\u591a\u5e72\u561b\u003f\u0021"
+      "one_instance_allowed": "\u914d\u7f6e\u4e00\u4e2a\u5c31\u591f\u4e86\u002c\u5f04\u90a3\u4e48\u591a\u5e72\u561b\u003f\u0021",
+      "can_not_establish_connection": "\u65e0\u6cd5\u4e0e\u670d\u52a1\u5668\u5efa\u7acb\u8fde\u63a5\u002c\u8bf7\u786e\u8ba4\u0049\u0050\u662f\u5426\u6b63\u786e"
     }
   }
 }
